--- a/source/form.html
+++ b/source/form.html
@@ -70,7 +70,7 @@
           <textarea class="form__item form__item--text" id="text-field" placeholder="Расскажите обо всех повадках кота"></textarea>
         </fieldset>
         <fieldset class="form__supplements">
-          <legend class="form__text">Дополнительно
+          <legend class="form__text">Дополнительно</legend>
             <ul class="form__list">
               <li class="form__item">
                 <input type="checkbox" id="sugar" class="form__checkbox">
@@ -89,7 +89,6 @@
                 <label for="vitamins" class="form__sign"></label>
               </li>
             </ul>
-          </legend>
         </fieldset>
         <button class="form__btn" type="submit">Отправить заявку</button>
         <p class="form__note"><sup>*</sup> — Обязательные поля</p>
