--- a/source/form.html
+++ b/source/form.html
@@ -29,7 +29,9 @@
     </header>
     <main class="page-content container">
       <h1 class="page-content__title">Подбор программы</h1>
-      <p class="page-content__description">Заполните анкету, и мы подберём программу питания для вашего кота</p>
+      <p class="page-content__description">
+        Заполните анкету, и мы подберём программу питания для вашего
+      </p>
       <form method="POST" action="https://echo.htmlacademy.ru/courses" class="page-content__form form">
         <fieldset class="form__about form__about--cat">
           <legend class="visually-hidden">Данные о питомце</legend>
