--- a/source/index.html
+++ b/source/index.html
@@ -34,9 +34,7 @@
           <h2 class="promo__title">Функциональное питание для котов</h2>
           <p class="promo__slogan">Занялся собой? Займись и котом!</p>
           <img src="img/product.png" width="280" height="270" alt="Банка с кормом Cat Energy Pro" class="promo__image">
-          <a href="form.html" class="promo__btn button">
-            Подобрать программу
-          </a>
+          <a href="form.html" class="promo__btn primary-button">Подобрать программу</a>
         </div>
       </section>
       <section class="page-content__offers offers container">
@@ -103,17 +101,17 @@
     </main>
     <footer class="page-footer">
       <div class="page-footer__wrapper">
-          <p class="cooperation__text">Приглашаем к сотрудничеству дилеров!</p>
-          <address class="location__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</address>
-        </div>
+        <p class="page-footer__cooperation">Приглашаем к сотрудничеству дилеров!</p>
+        <address class="page-footer__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</address>
+      </div>
       <div class="page-footer__map">
         <img src="img/map.jpg" width="320" height="362" alt="Офис магазина по адресу город Санкт-Петербург, улица Большая Конюшенная, дом 19/8" class="page-footer__map-image">
       </div>
       <div class="page-footer__contacts">
         <div class="page-footer__container">
           <a href="#" class="page-footer__logo">
-          <img src="img/footer-logo.svg" width="128" height="24" alt="Магазин Cat Energy" class="page-footer__title-image">
-        </a>
+            <img src="img/footer-logo.svg" width="128" height="24" alt="Магазин Cat Energy" class="page-footer__title-image">
+          </a>
           <ul class="page-footer__contacts socials">
             <li class="socials__item">
               <a class="socials__link socials__link--vk" href="#" title="Вконтакте" target="_blank" rel="noopener noreferrer">
