--- a/source/catalog.html
+++ b/source/catalog.html
@@ -43,6 +43,7 @@
               <dd class="card__value">700 Р.</dd>
             </dl>
           </div>
+          <img src="img/catalog/mobile/chicken-small.jpg" width="68" height="86" alt=" " class="card__image">
           <a href="blank.html" class="card__button primary-button">Заказать</a>
         </article>
         <article class="cards__element card">
@@ -57,6 +58,7 @@
               <dd class="card__value">1000 Р.</dd>
             </dl>
           </div>
+          <img src="img/catalog/mobile/chicken-large.jpg" width="84" height="101" alt=" " class="card__image">
           <a href="blank.html" class="card__button primary-button">Заказать</a>
         </article>
         <article class="cards__element card">
@@ -71,6 +73,7 @@
               <dd class="card__value">700 Р.</dd>
             </dl>
           </div>
+          <img src="img/catalog/mobile/fish-small.jpg" width="68" height="78" alt=" " class="card__image">
           <a href="blank.html" class="card__button primary-button">Заказать</a>
         </article>
         <article class="cards__element card">
@@ -85,6 +88,7 @@
               <dd class="card__value">1000 Р.</dd>
             </dl>
           </div>
+          <img src="img/catalog/mobile/fish-large.jpg" width="84" height="101" alt=" " class="card__image">
           <a href="blank.html" class="card__button primary-button">Заказать</a>
         </article>
         <article class="cards__element card">
@@ -99,6 +103,7 @@
               <dd class="card__value">700 Р.</dd>
             </dl>
           </div>
+          <img src="img/catalog/mobile/buckwheat-small.jpg" width="68" height="78" alt=" " class="card__image">
           <a href="blank.html" class="card__button primary-button">Заказать</a>
         </article>
         <article class="cards__element card">
@@ -113,6 +118,7 @@
               <dd class="card__value">1000 Р.</dd>
             </dl>
           </div>
+          <img src="img/catalog/mobile/buckwheat-large.jpg" width="84" height="100" alt=" " class="card__image">
           <a href="blank.html" class="card__button primary-button">Заказать</a>
         </article>
         <article class="cards__element card">
@@ -127,6 +133,7 @@
               <dd class="card__value">700 Р.</dd>
             </dl>
           </div>
+          <img src="img/catalog/mobile/rice-small.jpg" width="72" height="84" alt=" " class="card__image">
           <a href="blank.html" class="card__button primary-button">Заказать</a>
         </article>
         <article class="cards__element card card--show-more">
