"Начало рабоы с sass"

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -30,10 +30,11 @@
     <main class="page-content container">
       <h1 class="page-content__title">Каталог продукции</h1>
       <section class="page-content__cards cards">
-        <h2 class="visually-hidden">Карточки товаров</h2>
         <article class="cards__element card">
           <div class="card__wrapper">
-            <h3 class="card__title">Cat energy pro 500 г</h3>
+            <h3 class="card__title">
+              <a href="#" class="card__link">Cat energy pro 500 г</a>
+            </h3>
             <dl class="card__info">
               <dt class="card__property">Масса</dt>
               <dd class="card__value">500 г</dd>
@@ -43,12 +44,16 @@
               <dd class="card__value">700 Р.</dd>
             </dl>
           </div>
-          <img src="img/catalog/mobile/chicken-small.jpg" width="68" height="86" alt=" " class="card__image">
+          <a href="#" class="card__link card__link--image">
+            <img src="img/catalog/mobile/chicken-small.jpg" width="68" height="86" alt=" " class="card__image">
+          </a>
           <a href="blank.html" class="card__button primary-button">Заказать</a>
         </article>
         <article class="cards__element card">
           <div class="card__wrapper">
-            <h3 class="card__title">Cat energy pro 1000 г</h3>
+            <h3 class="card__title">
+              <a href="#" class="card__link">Cat energy pro 1000 г</a>
+            </h3>
             <dl class="card__info">
               <dt class="card__property">Масса</dt>
               <dd class="card__value">1000 г</dd>
@@ -58,49 +63,79 @@
               <dd class="card__value">1000 Р.</dd>
             </dl>
           </div>
-          <img src="img/catalog/mobile/chicken-large.jpg" width="84" height="101" alt=" " class="card__image">
+          <a href="#" class="card__link card__link--image">
+            <img src="img/catalog/mobile/chicken-large.jpg" width="84" height="101" alt=" " class="card__image">
+          </a>
           <a href="blank.html" class="card__button primary-button">Заказать</a>
         </article>
         <article class="cards__element card">
           <div class="card__wrapper">
-            <h3 class="card__title">Cat energy pro 500 г</h3>
+            <h3 class="card__title">
+              <a href="#" class="card__link">Cat energy pro 500 г</a>
+            </h3>
             <dl class="card__info">
-              <dt class="card__property">Масса</dt>
-              <dd class="card__value">500 г</dd>
-              <dt class="card__property">Вкус</dt>
-              <dd class="card__value">Рыба</dd>
-              <dt class="card__property">Цена</dt>
-              <dd class="card__value">700 Р.</dd>
+              <div class="card__inner">
+                <dt class="card__property">Масса</dt>
+                <dd class="card__value">500 г</dd>
+              </div>
+              <div class="card__inner">
+                <dt class="card__property">Вкус</dt>
+                <dd class="card__value">Рыба</dd>
+              </div>
+              <div class="card__inner">
+                <dt class="card__property">Цена</dt>
+                <dd class="card__value">700 Р.</dd>
+              </div>
             </dl>
           </div>
-          <img src="img/catalog/mobile/fish-small.jpg" width="68" height="78" alt=" " class="card__image">
+          <a href="#" class="card__link card__link--image">
+            <img src="img/catalog/mobile/fish-small.jpg" width="68" height="78" alt=" " class="card__image">
+          </a>
           <a href="blank.html" class="card__button primary-button">Заказать</a>
         </article>
         <article class="cards__element card">
           <div class="card__wrapper">
-            <h3 class="card__title">Cat energy pro 1000 г</h3>
+            <h3 class="card__title">
+              <a href="#" class="card__link">Cat energy pro 1000 г</a>
+            </h3>
             <dl class="card__info">
-              <dt class="card__property">Масса</dt>
-              <dd class="card__value">1000 г</dd>
-              <dt class="card__property">Вкус</dt>
-              <dd class="card__value">Рыба</dd>
-              <dt class="card__property">Цена</dt>
-              <dd class="card__value">1000 Р.</dd>
+              <div class="card__inner">
+                <dt class="card__property">Масса</dt>
+                <dd class="card__value">1000 г</dd>
+              </div>
+              <div class="card__inner">
+                <dt class="card__property">Вкус</dt>
+                <dd class="card__value">Рыба</dd>
+              </div>
+              <div class="card__inner">
+                <dt class="card__property">Цена</dt>
+                <dd class="card__value">1000 Р.</dd>
+              </div>
             </dl>
           </div>
-          <img src="img/catalog/mobile/fish-large.jpg" width="84" height="101" alt=" " class="card__image">
+          <a href="#" class="card__link card__link--image">
+            <img src="img/catalog/mobile/fish-large.jpg" width="84" height="101" alt=" " class="card__image">
+          </a>
           <a href="blank.html" class="card__button primary-button">Заказать</a>
         </article>
         <article class="cards__element card">
           <div class="card__wrapper">
-            <h3 class="card__title">Cat energy pro 500 г</h3>
+            <h3 class="card__title">
+              <a href="#" class="card__link">Cat energy pro 500 г</a>
+            </h3>
             <dl class="card__info">
-              <dt class="card__property">Масса</dt>
-              <dd class="card__value">500 г</dd>
-              <dt class="card__property">Вкус</dt>
-              <dd class="card__value">Гречка</dd>
-              <dt class="card__property">Цена</dt>
-              <dd class="card__value">700 Р.</dd>
+              <div class="card__inner">
+                <dt class="card__property">Масса</dt>
+                <dd class="card__value">500 г</dd>
+              </div>
+              <div class="card__inner">
+                <dt class="card__property">Вкус</dt>
+                <dd class="card__value">Гречка</dd>
+              </div>
+              <div class="card__inner">
+                <dt class="card__property">Цена</dt>
+                <dd class="card__value">700 Р.</dd>
+              </div>
             </dl>
           </div>
           <img src="img/catalog/mobile/buckwheat-small.jpg" width="68" height="78" alt=" " class="card__image">
@@ -108,36 +143,58 @@
         </article>
         <article class="cards__element card">
           <div class="card__wrapper">
-            <h3 class="card__title">Cat energy pro 1000 г</h3>
+            <h3 class="card__title">
+              <a href="#" class="card__link">Cat energy pro 1000 г</a>
+            </h3>
             <dl class="card__info">
-              <dt class="card__property">Масса</dt>
-              <dd class="card__value">1000 г</dd>
-              <dt class="card__property">Вкус</dt>
-              <dd class="card__value">Гречка</dd>
-              <dt class="card__property">Цена</dt>
-              <dd class="card__value">1000 Р.</dd>
+              <div class="card__inner">
+                <dt class="card__property">Масса</dt>
+                <dd class="card__value">1000 г</dd>
+              </div>
+              <div class="card__inner">
+                <dt class="card__property">Вкус</dt>
+                <dd class="card__value">Гречка</dd>
+              </div>
+              <div class="card__inner">
+                <dt class="card__property">Цена</dt>
+                <dd class="card__value">1000 Р.</dd>
+              </div>
             </dl>
           </div>
-          <img src="img/catalog/mobile/buckwheat-large.jpg" width="84" height="100" alt=" " class="card__image">
+          <a href="#" class="card__link card__link--image">
+            <img src="img/catalog/mobile/buckwheat-large.jpg" width="84" height="100" alt=" " class="card__image">
+          </a>
           <a href="blank.html" class="card__button primary-button">Заказать</a>
         </article>
         <article class="cards__element card">
           <div class="card__wrapper">
-            <h3 class="card__title">Cat energy pro 500 г</h3>
+            <h3 class="card__title">
+              <a href="#" class="card__link">Cat energy pro 500 г</a>
+            </h3>
             <dl class="card__info">
-              <dt class="card__property">Масса</dt>
-              <dd class="card__value">500 г</dd>
-              <dt class="card__property">Вкус</dt>
-              <dd class="card__value">Рис</dd>
-              <dt class="card__property">Цена</dt>
-              <dd class="card__value">700 Р.</dd>
+              <div class="card__inner">
+                <dt class="card__property">Масса</dt>
+                <dd class="card__value">500 г</dd>
+              </div>
+              <div class="card__inner">
+                <dt class="card__property">Вкус</dt>
+                <dd class="card__value">Рис</dd>
+              </div>
+              <div class="card__inner">
+                <dt class="card__property">Цена</dt>
+                <dd class="card__value">700 Р.</dd>
+              </div>
             </dl>
           </div>
-          <img src="img/catalog/mobile/rice-small.jpg" width="72" height="84" alt=" " class="card__image">
+          <a href="#" class="card__link card__link--image">
+            <img src="img/catalog/mobile/rice-small.jpg" width="72" height="84" alt=" " class="card__image">
+          </a>
           <a href="blank.html" class="card__button primary-button">Заказать</a>
         </article>
         <article class="cards__element card card--show-more">
-          <h3 class="card__title">Показать ещё 100500 товаров</h3>
+          <h3 class="card__title">
+            <a href="#" class="card__link">Показать ещё 100500 товаров</a>
+          </h3>
           <p class="card__info">На самом деле вкусов гораздо больше!</p>
           <a href="blank.html" class="card__button primary-button primary-button--show-more">Показать все</a>
         </article>
