--- a/source/index.html
+++ b/source/index.html
@@ -6,8 +6,8 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body class="page-body">
-    <header class="page-header container">
-      <div class="page-header__wrapper">
+    <header class="page-header">
+      <div class="page-header__wrapper container">
         <a href="#" class="page-header__logo">
           <img src="img/logo-img-mobile.svg" width="34" height="38" alt="Логотип магазина Cat Energy" class="page-header__logo-image">
           <img src="img/logo-text-mobile.svg" width="101" height="18" alt="Магазин Cat Energy" class="page-header__title-image">
@@ -34,22 +34,24 @@
       <h1 class="visually-hidden">Главная страница магазина "Cat Energy"</h1>
       <section class="page-content__promo promo container">
         <div class="promo__wrapper">
-          <h2 class="promo__title">Функциональное питание для котов</h2>
-          <p class="promo__slogan">Занялся собой? Займись и котом!</p>
+          <div class="promo__inner">
+            <h2 class="promo__title">Функциональное питание для котов</h2>
+            <p class="promo__slogan">Занялся собой? Займись котом!</p>
+          </div>
+          <img src="img/product.png" width="280" height="270" alt="Банка с кормом Cat Energy Pro" class="promo__image">
+          <a href="form.html" class="promo__btn primary-button">Подобрать программу</a>
         </div>
-        <img src="img/product.png" width="280" height="270" alt="Банка с кормом Cat Energy Pro" class="promo__image">
-        <a href="form.html" class="promo__btn primary-button">Подобрать программу</a>
       </section>
       <section class="page-content__offers offers container">
         <h2 class="visually-hidden">Наши предложения</h2>
         <article class="offers__card offer">
           <h3 class="offer__title offer__title--slim">Похудение</h3>
           <p class="offer__description">
-            Ваш кот весит больше собаки и&nbsp;почти утратил способность лазить по&nbsp;деревьям? Пора на&nbsp;диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
+            Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
           </p>
           <a class="offer__link" href="blank.html">Каталог Slim</a>
         </article>
-        <article class="offer__card">
+        <article class="offers__card offer offer--pro">
           <h3 class="offer__title offers__title--pro">Набор массы</h3>
           <p class="offer__description">
             Заработать авторитет среди дворовых котов и&nbsp;даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
@@ -75,18 +77,24 @@
         </ul>
       </section>
       <section class="example">
-        <div class="example__container">
+        <div class="example__wrapper container">
           <h2 class="example__title">Живой пример</h2>
           <p class="example__text">
             Борис сбросил 5&nbsp;кг за&nbsp;2&nbsp;месяца, просто заменив свой обычный корм на&nbsp;Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он&nbsp;не&nbsp;менял своих привычек и&nbsp;по-прежнему спит по&nbsp;16&nbsp;часов в&nbsp;день.
           </p>
           <dl class="example__table">
-            <dt class="example__property example__property--slim">Снижение веса</dt>
-            <dd class="example--value example__value--slim">5 кг</dd>
-            <dt class="example__property example__property--time">Затрачено времени</dt>
-            <dd class="example--value example__value--time">60 дней</dd>
-            <dt class="example__property example__property--cost">Затраты на питание:</dt>
-            <dd class="example--value example__value--cost">15 000 руб.</dd>
+            <div class="example__inner">
+              <dt class="example__property example__property--slim">Снижение веса</dt>
+              <dd class="example__value example__value--slim">5 кг</dd>
+            </div>
+            <div class="example__inner">
+              <dt class="example__property example__property--time">Затрачено времени</dt>
+              <dd class="example__value example__value--time">60 дней</dd>
+            </div>
+            <div class="example__inner example__inner--cost">
+              <dt class="example__property example__property--cost">Затраты на питание:</dt>
+              <dd class="example__value example__value--cost">15 000 руб.</dd>
+            </div>
           </dl>
           <div class="example__slider slider">
             <div class="slider__container">
@@ -103,15 +111,15 @@
       </section>
     </main>
     <footer class="page-footer">
-      <div class="page-footer__wrapper">
+      <div class="page-footer__wrapper container">
         <p class="page-footer__cooperation">Приглашаем к сотрудничеству дилеров!</p>
         <address class="page-footer__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</address>
       </div>
-      <div class="page-footer__map">
+      <div class="page-footer__map container">
         <img src="img/map.jpg" width="320" height="362" alt="Офис магазина по адресу город Санкт-Петербург, улица Большая Конюшенная, дом 19/8" class="page-footer__map-image">
       </div>
       <div class="page-footer__contacts">
-        <div class="page-footer__container">
+        <div class="page-footer__box container">
           <a href="#" class="page-footer__logo">
             <img src="img/footer-logo.svg" width="128" height="24" alt="Магазин Cat Energy" class="page-footer__title-image">
           </a>
@@ -142,11 +150,10 @@
             </li>
           </ul>
           <a class="page-footer__copyright" href="https://htmlacademy.ru/intensive/adaptive" target="_blank" rel="noopener noreferrer">
-          <span class="visually-hidden">Ссылка на страницу HTML Academy</span>
-          HTML Academy
-          <svg aria-hidden="true" width="27" height="34" viewBox="0 0 27 34" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M13.6426 0.0157537L13.5 0L0 1.40733V26.0129L13.5 34L27 26.0129V1.40733L13.6426 0.0157537ZM25.2344 25.0151L13.5 31.9573L1.76561 25.0151V14.9293L13.4507 21.8451L13.4701 23.0984L5.45351 18.3548L5.44295 19.5801L13.4894 24.3885L13.5088 25.675L5.46408 20.9174L5.45351 22.1427L13.5 26.9511L21.6239 22.1182V20.8929V16.909L25.2432 14.7595L25.2344 25.0151ZM25.2344 13.4519L22.0147 15.3319L20.5325 16.2071L13.4666 12.0201L13.456 13.2454L19.4957 16.818L19.4429 16.8495L19.3126 16.9247L18.4536 17.4166L13.4666 14.4689L13.456 15.6942L17.3921 18.0222L16.4591 18.6314L16.438 18.6436L13.4666 16.902L13.456 18.1273L15.4029 19.2615L13.4155 20.4483L1.7973 13.5762L13.4349 6.61831L25.2344 13.4519ZM25.2344 12.2266L13.4401 5.31075L1.76561 12.2196V2.9897L13.5 1.76442L25.2344 2.9897V12.2266Z" fill="#666666"/>
-          </svg>
+            <span class="page-footer__copyright-text">HTML Academy</span>
+            <svg class="page-footer__copyright-icon" aria-hidden="true" width="27" height="34" viewBox="0 0 27 34" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M13.6426 0.0157537L13.5 0L0 1.40733V26.0129L13.5 34L27 26.0129V1.40733L13.6426 0.0157537ZM25.2344 25.0151L13.5 31.9573L1.76561 25.0151V14.9293L13.4507 21.8451L13.4701 23.0984L5.45351 18.3548L5.44295 19.5801L13.4894 24.3885L13.5088 25.675L5.46408 20.9174L5.45351 22.1427L13.5 26.9511L21.6239 22.1182V20.8929V16.909L25.2432 14.7595L25.2344 25.0151ZM25.2344 13.4519L22.0147 15.3319L20.5325 16.2071L13.4666 12.0201L13.456 13.2454L19.4957 16.818L19.4429 16.8495L19.3126 16.9247L18.4536 17.4166L13.4666 14.4689L13.456 15.6942L17.3921 18.0222L16.4591 18.6314L16.438 18.6436L13.4666 16.902L13.456 18.1273L15.4029 19.2615L13.4155 20.4483L1.7973 13.5762L13.4349 6.61831L25.2344 13.4519ZM25.2344 12.2266L13.4401 5.31075L1.76561 12.2196V2.9897L13.5 1.76442L25.2344 2.9897V12.2266Z" fill="#666666"/>
+            </svg>
           </a>
         </div>
       </div>
