--- a/source/index.html
+++ b/source/index.html
@@ -5,19 +5,23 @@
     <title>HTML Academy: Кэт энерджи</title>
     <link href="css/style.css" rel="stylesheet">
   </head>
-  <body class="page-body">
+  <body class="page__body">
     <header class="page-header">
       <div class="page-header__wrapper container">
         <a href="#" class="page-header__logo">
           <img src="img/logo-img-mobile.svg" width="34" height="38" alt="Логотип магазина Cat Energy" class="page-header__logo-image">
           <img src="img/logo-text-mobile.svg" width="101" height="18" alt="Магазин Cat Energy" class="page-header__title-image">
         </a>
-        <button class="page-header__btn" type="button">
+        <button class="menu__button" type="button" aria-controls="menu__list">
           <span class="visually-hidden">Открыть, закрыть</span>
+          <svg class="menu__icon" aria-hidden="true" width="24" height="16">
+            <use class="menu__icon-menu" href="img/sprite.svg#menu"></use>
+            <use class="menu__icon-cross" href="img/sprite.svg#cross"></use>
+          </svg>
         </button>
       </div>
       <nav class="page-header__menu menu">
-        <ul class="menu__list">
+        <ul class="menu__list" id="menu__list">
           <li class="menu__item">
             <a class="menu__link" href="#">Главная</a>
           </li>
@@ -32,8 +36,8 @@
     </header>
     <main class="page-content">
       <h1 class="visually-hidden">Главная страница магазина "Cat Energy"</h1>
-      <section class="page-content__promo promo container">
-        <div class="promo__wrapper">
+      <section class="page-content__promo promo">
+        <div class="promo__wrapper container">
           <div class="promo__inner">
             <h2 class="promo__title">Функциональное питание для котов</h2>
             <p class="promo__slogan">Занялся собой? Займись котом!</p>
@@ -47,7 +51,7 @@
         <article class="offers__card offer">
           <h3 class="offer__title offer__title--slim">Похудение</h3>
           <p class="offer__description">
-            Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
+            Ваш кот весит больше собаки и почти утратил способность лазить по&nbsp;деревьям? Пора на&nbsp;диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
           </p>
           <a class="offer__link" href="blank.html">Каталог Slim</a>
         </article>
