--- a/source/index.html
+++ b/source/index.html
@@ -6,8 +6,8 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body class="page__body">
-    <header class="page-header">
-      <div class="page-header__wrapper container">
+    <header class="page-header container">
+      <div class="page-header__wrapper">
         <a href="#" class="page-header__logo">
           <img src="img/logo-img-mobile.svg" width="34" height="38" alt="Логотип магазина Cat Energy" class="page-header__logo-image">
           <img src="img/logo-text-mobile.svg" width="101" height="18" alt="Магазин Cat Energy" class="page-header__title-image">
@@ -26,10 +26,10 @@
             <a class="menu__link" href="#">Главная</a>
           </li>
           <li class="menu__item">
-            <a class="menu__link" href="#">Каталог</a>
+            <a class="menu__link" href="catalog.html">Каталог</a>
           </li>
           <li class="menu__item">
-            <a class="menu__link" href="#">Подбор программы</a>
+            <a class="menu__link" href="form.html">Подбор программы</a>
           </li>
         </ul>
       </nav>
