Правки по второму дз и чекбокс

--- a/source/form.html
+++ b/source/form.html
@@ -91,24 +91,39 @@
         <fieldset class="form__group form__group--supplements">
           <legend class="form__text form__text--supplements">Дополнительно</legend>
           <div class="form__item checkbox">
-            <input type="checkbox" id="sugar" class="checkbox__input visually-hidden" checked>
-            <label for="sugar" class="checkbox__label">Сахарозаменитель</label>
+            <label for="sugar" class="checkbox__label">
+              <input type="checkbox" id="sugar" class="checkbox__input visually-hidden" checked>
+              <svg class="checkbox_svg" width="19" height="15" viewBox="0 0 19 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path class="checkbox_line" d="M7 11.718L1.3 5.26951L0.25 6.45739L7 14.0938L18.25 1.36648L17.2 0.09375L7 11.718Z" fill="#68B738"/></svg>
+            Сахарозаменитель</label>
           </div>
           <div class="form__item checkbox">
-            <input type="checkbox" id="water" class="checkbox__input visually-hidden">
-            <label for="water" class="checkbox__label">Питьевая вода</label>
+            <label for="water" class="checkbox__label">
+              <input type="checkbox" id="water" class="checkbox__input visually-hidden">
+              <svg class="checkbox_svg" width="19" height="15" viewBox="0 0 19 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path class="checkbox_line" d="M7 11.718L1.3 5.26951L0.25 6.45739L7 14.0938L18.25 1.36648L17.2 0.09375L7 11.718Z" fill="#68B738"/>
+              </svg>
+            Питьевая вода</label>
           </div>
           <div class="form__item checkbox">
-            <input type="checkbox" id="milk" class="checkbox__input visually-hidden">
-            <label for="milk" class="checkbox__label">Молоко</label>
+            <label for="milk" class="checkbox__label">
+              <input type="checkbox" id="milk" class="checkbox__input visually-hidden">
+              <svg class="checkbox_svg" width="19" height="15" viewBox="0 0 19 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path class="checkbox_line" d="M7 11.718L1.3 5.26951L0.25 6.45739L7 14.0938L18.25 1.36648L17.2 0.09375L7 11.718Z" fill="#68B738"/>
+              </svg>
+            Молоко</label>
           </div>
           <div class="form__item checkbox">
-            <input type="checkbox" id="vitamins" class="checkbox__input visually-hidden">
-            <label for="vitamins" class="checkbox__label">Витамины</label>
+            <label for="vitamins" class="checkbox__label">
+              <input type="checkbox" id="vitamins" class="checkbox__input visually-hidden">
+              <svg class="checkbox_svg" width="19" height="15" viewBox="0 0 19 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path class="checkbox_line" d="M7 11.718L1.3 5.26951L0.25 6.45739L7 14.0938L18.25 1.36648L17.2 0.09375L7 11.718Z" fill="#68B738"/>
+              </svg>
+            Витамины</label>
           </div>
         </fieldset>
         <button class="form__btn primary-button" type="submit">Отправить заявку</button>
-        <p class="form__note"><sup>*</sup> — Обязательные поля</p>
+        <p class="form__note">* — Обязательные поля</p>
       </form>
     </main>
     <footer class="page-footer">
