Сетка страницы формы

--- a/source/index.html
+++ b/source/index.html
@@ -127,7 +127,10 @@
     <footer class="page-footer page-footer--index">
       <div class="page-footer__wrapper container">
         <p class="page-footer__cooperation">Приглашаем к сотрудничеству дилеров!</p>
-        <address class="page-footer__address">ул. Большая Конюшенная, д. 19/8 <span class="page-footer__address page-footer__address--space">Санкт-Петербург</span></address>
+        <address class="page-footer__address">
+          ул. Большая Конюшенная, д. 19/8
+          <span class="page-footer__address page-footer__address--space">Санкт-Петербург</span>
+        </address>
       </div>
       <div class="page-footer__map">
         <iframe class="page-footer__map-image" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2393.9919987303897!2d30.320439600490996!3d59.93850547005891!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1618024616357!5m2!1sru!2sru" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
