--- a/source/catalog.html
+++ b/source/catalog.html
@@ -241,13 +241,13 @@
               <a href="blank.html" class="card__button primary-button">Заказать</a>
             </article>
           </li>
-          <li class="cards__item">
-            <article class="cards__element card container container--reset">
-              <h3 class="card__title card__title--show-more">
+          <li class="cards__item cards__item--more">
+            <article class="cards__element card card--show-more container container--reset">
+              <h3 class="card__title card__title">
                 <a href="#" class="card__link">Показать ещё 100500 товаров</a>
               </h3>
               <p class="card__info card__info--desc">На самом деле вкусов гораздо больше!</p>
-              <a href="blank.html" class="card__button card__button--show-more primary-button">Показать все</a>
+              <a href="blank.html" class="card__button primary-button">Показать все</a>
             </article>
           </li>
         </ul>
