--- a/source/catalog.html
+++ b/source/catalog.html
@@ -31,7 +31,7 @@
             <a class="menu__link" href="index.html">Главная</a>
           </li>
           <li class="menu__item">
-            <a class="menu__link" href="catalog.html">Каталог продукции</a>
+            <a class="menu__link menu__link--current" href="catalog.html">Каталог продукции</a>
           </li>
           <li class="menu__item">
             <a class="menu__link" href="form.html">Подбор программы</a>
