--- a/source/form.html
+++ b/source/form.html
@@ -34,7 +34,7 @@
             <a class="menu__link" href="catalog.html">Каталог продукции</a>
           </li>
           <li class="menu__item">
-            <a class="menu__link" href="#">Подбор программы</a>
+            <a class="menu__link menu__link--current" href="#">Подбор программы</a>
           </li>
         </ul>
       </nav>
