--- a/source/index.html
+++ b/source/index.html
@@ -34,13 +34,13 @@
       <nav class="page-header__menu menu">
         <ul class="menu__list" id="menu__list">
           <li class="menu__item">
-            <a class="menu__link menu__link--current menu__link--current-desktop" href="#">Главная</a>
+            <a class="menu__link menu__link--index menu__link--current menu__link--current-desktop" href="#">Главная</a>
           </li>
           <li class="menu__item">
-            <a class="menu__link" href="catalog.html">Каталог продукции</a>
+            <a class="menu__link menu__link--index" href="catalog.html">Каталог продукции</a>
           </li>
           <li class="menu__item">
-            <a class="menu__link" href="form.html">Подбор программы</a>
+            <a class="menu__link menu__link--index" href="form.html">Подбор программы</a>
           </li>
         </ul>
       </nav>
