Декор и резина каталога

--- a/source/form.html
+++ b/source/form.html
@@ -87,7 +87,7 @@
         </div>
         <fieldset class="form__group form__group--owner">
           <div class="container container--form">
-            <legend class="form__text form__text--owner">Контактные данные (владельца кота)</legend>
+            <legend class="form__text form__text--owner form__text--line">Контактные данные (владельца кота)</legend>
             <div class="form__grid">
               <div class="form__column form__column--email form-control">
                 <label class="form-control__label" for="owner-email">E-mail:<sup>*</sup></label>
@@ -104,7 +104,7 @@
         </fieldset>
         <fieldset class="form__group form__group--comment">
           <div class="container container--form">
-            <legend class="form__text form__text--comment">Комментарий</legend>
+            <legend class="form__text form__text--comment form__text--line">Комментарий</legend>
             <div class="form__group-item form-control">
               <label class="visually-hidden" for="text-field">Текст комментария:</label>
               <textarea class="form-control__field form-control__field--text" id="text-field" placeholder="Расскажите обо всех повадках кота"></textarea>
@@ -113,7 +113,7 @@
         </fieldset>
         <fieldset class="form__group form__group--supplements">
           <div class="container container--form">
-            <legend class="form__text form__text--supplements">Дополнительно</legend>
+            <legend class="form__text form__text--supplements form__text--line">Дополнительно</legend>
             <div class="form__item-box">
               <div class="form__item checkbox">
                 <label for="sugar" class="checkbox__label">
